about component image  overflow fixed

--- a/src/components/about/styles.css
+++ b/src/components/about/styles.css
@@ -7,6 +7,7 @@
 .image-box {
     height: 600px;
     background: linear-gradient(to right bottom, #b9bbc7, #01041E);
+    overflow: hidden;
 }
 
 .text-box {
