--- a/src/components/home/styles.css
+++ b/src/components/home/styles.css
@@ -1,7 +1,7 @@
 .hero-section {
     position: relative;
     background:  linear-gradient(to right bottom,#01041E,#01041E  );
-    
+    overflow-y:hidden;
 }
 
 .hero {
